# feeble-bot

./: .gitignore  Cargo.toml  makefile
migrations/2024-03-07-044851_account_mapping/: down.sql  up.sql
migrations/2024-03-07-224731_sessions/: up.sql
migrations/2024-03-07-225754_users/: up.sql
src/: account_client.rs  db.rs  discord_api.rs  main.rs  schema.rs
src/api/: auth.rs  bots.rs  err.rs  mod.rs
src/api/session/: layer.rs  mod.rs  session.rs
src/bots/: account_client.rs  api_schema.rs  manager.rs  mod.rs  ws.rs
src/schemas/: account_mapping.rs  controlled_account.rs  mod.rs  user.rs
src/util/: log.rs  mod.rs
