[package]
name = "feeble-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-tungstenite = {version="0.25.0", features=["tokio-runtime", "tokio-native-tls", "tokio-native-tls", "async-tls"]}
axum = "0.7.4"
axum-core = "0.4.3"
diesel = {version = "2.1.4", features = ["postgres", "r2d2", "serde_json"]}
dotenv = "0.15.0"
hex = "0.4.3"
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = {version = "0.11.24", features = ["json"]}
serde = {version="1.0.197", features = ["derive"]}
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
