[package]
name = "feeble-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-diesel = "0.1.0"
async-trait = "0.1.77"
async-tungstenite = {version="0.25.0", features=["tokio-runtime", "tokio-native-tls", "tokio-native-tls", "async-tls"]}
axum = "0.7.4"
axum-core = "0.4.3"
axum-extra = {version="0.9.2", features = ["cookie", "cookie-signed"]}
base64 = "0.22.0"
bcrypt = "0.15.0"
chrono = {version="0.4.35", features = ["serde"]}
cookie = "0.18.0"
diesel = {version = "2.1.4", features = ["postgres", "r2d2", "serde_json", "chrono"]}
dotenv = "0.15.0"
futures-util = "0.3.30"
hex = "0.4.3"
hmac = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.21"
log4rs = "1.3.0"
rand = "0.8.5"
reqwest = {version = "0.11.24", features = ["json"]}
serde = {version="1.0.197", features = ["derive"]}
serde_json = "1.0.114"
sha2 = "0.10.8"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full", "io-util"] }
tower = "0.4.13"
tower-service = "0.3.2"
urlencoding = "2.1.3"
